Use of URL to determine name was causing problems with the unknown HDFS scheme, so switched to URI.